--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,21 +14,19 @@
 </head>
 <body>
 <header>
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark" id="topOfPage">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top py-0" id="topOfPage">
 		<div class="container-fluid">
-			<a class="navbar-brand fs-1 fw-bold" href="#topOfPage">
-				<!--				<img src="imgs/place-holder-logo.jpg" alt="" width="30" height="24"-->
-				<!--					 class="d-inline-block align-text-top">-->
+			<a class="navbar-brand fs-1 fw-bold text-white text-wrap" href="#topOfPage">
+								<img src="imgs/dragon-ball-logo.png" alt="logo" width="50" height="50"
+									 class="d-inline-block">
 				Saiyan Web Development</a>
-<!--							<br>-->
-<!--							<div class="fst-italic fs-3 ms-5">Personal Website Development Services</div></a>-->
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+			<button class="navbar-toggler p-0" type="button" data-bs-toggle="collapse"
 					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 					aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse changeFlexGrow" id="navbarSupportedContent">
-				<div class="navbar-nav ml-auto mb-2 mb-lg-0">
+				<div class="navbar-nav ml-auto mb-2 mb-md-0">
 					<a class="nav-link active" aria-current="page" href="#aboutMe">About Me</a>
 					<a class="nav-link" href="#services">Service Plans</a>
 					<a class="nav-link" href="#reviews">Client Reviews</a>
@@ -37,6 +35,13 @@
 			</div>
 		</div>
 	</nav>
+	<div class="container-fluid bg-dark">
+		<div class="row">
+			<div class="col-md-7">
+				<p class="fst-italic fs-3 ms-md-5 mb-0 text-white text-lg-center">Personal Website Development Services</p>
+			</div>
+		</div>
+	</div>
 </header>
 
 <main>
