--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,7 +13,7 @@
 	<title>Personal Website Project</title>
 </head>
 <body>
-<header>
+<!--<header>-->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top py-0" id="topOfPage">
 		<div class="container-fluid">
 			<a class="navbar-brand fs-1 fw-bold text-white text-wrap" href="#topOfPage">
@@ -38,11 +38,11 @@
 	<div class="container-fluid bg-dark">
 		<div class="row">
 			<div class="col-md-7">
-				<p class="fst-italic fs-3 ms-md-5 mb-0 text-white text-lg-center">Personal Website Development Services</p>
+				<p class="fst-italic fs-3 ms-md-5 mb-0 text-white text-lg-center">Website Development Services</p>
 			</div>
 		</div>
 	</div>
-</header>
+<!--</header>-->
 
 <main>
 	<section class="container-fluid px-0">
