--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,7 +31,8 @@
 				<a class="nav-link active text-white" aria-current="page" href="#aboutMe" id="linkBgOne">About</a>
 				<a class="nav-link  text-white" href="#services" id="linkBgTwo">Services</a>
 				<a class="nav-link  text-white" href="#reviews" id="linkBgThree">Testimonials</a>
-				<a class="nav-link" href="#contactMe" id="linkBgFour"><span class="highlight-text-purple">Contact Me</span></a>
+				<a class="nav-link" href="#contactMe" id="linkBgFour"><span
+						class="highlight-text-purple">Contact Me</span></a>
 			</div>
 		</div>
 	</div>
@@ -39,178 +40,212 @@
 <div class="container-fluid bg-dark">
 	<div class="row">
 		<div class="col-md-7">
-			<p class="fst-italic fs-3 ms-md-5 mb-0 text-lg-center highlight-text-purple">Website Development Services</p>
+			<h1 class="fst-italic fs-3 ms-md-5 mb-0 text-lg-center highlight-text-purple">Website Development
+				Services</h1>
 		</div>
 	</div>
 </div>
 
-<!--Video-->
 <main>
+	<!--Video-->
 	<section class="container-fluid">
 		<div class="row my-4">
 			<video src="imgs/pwp-background-video.mp4" autoplay muted loop class="backgroundIMGSize"></video>
 		</div>
 	</section>
 
-	<!--About me-->
-	<section class="container pb-4 pt-3 px-2 bg-dark text-white" id="aboutMe">
-		<div class="row px-2 pb-5 justify-content-between">
-			<div class="col-md-8">
-				<h1 class="fs-1 uppercutFont">About Saiyan Web Development</h1>
-				<p class="fs-4 custom-text-about-me">Welcome to the most <span class="highlight-text-purple">affordable</span>
-					and <span class="highlight-text-purple">reliable</span> website development service! With my service you
-					will get
-					your own <span class="highlight-text-purple">website</span> built from the ground up. I <span
-							class="highlight-text-purple">guarantee</span> your new
-					website will look and work how you want. This is done by having virtual <span
-							class="highlight-text-purple">one-on-one</span>
-					meetings to ensure the
-					<span class="highlight-text-purple">design</span> and <span class="highlight-text-purple">functionality</span>
-					fits your needs and goals. You can <span class="highlight-text-purple">trust</span> that I can make your
-					new website a reality!
-				</p>
-			</div>
-			<div class="col-1 m-auto">
-				<a href="https://github.com/Brody-code-designer" title="GitHub" class="removeBlue">
-					<svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor"
-						 class="bi bi-github" viewBox="0 0 16 16">
-						<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-					</svg>
-				</a>
-			</div>
-		</div>
-	</section>
-
-	<!--Services Available-->
-	<section class="container d-flex justify-content-center bg-dark text-white pb-2 px-2" id="services">
-		<div class="row">
-			<div class="col-md-4">
-				<h2 class="text-center fs-1 text-nowrap uppercutFont">Services</h2>
-			</div>
-		</div>
-	</section>
-	<section class="container bg-dark text-white fs-4 pb-5 px-2">
-		<div class="row px-2">
-			<div class="col-md-4 my-3">
-				<a href="#contactMe" style="text-decoration: none">
-				<div class="card border border-light border-3 bg-dark text-white" id="serviceOne">
-					<div class="card-body backgroundSecondaryColor text-white">
-						<h5 class="card-title backgroundSecondaryColor text-white fs-3 text-uppercase">Personal Website</h5>
-						<p class="card-text backgroundSecondaryColor text-white">You will get a one-page personally designed website.</p>
-					</div>
-					<ul class="list-group list-group-flush bg-secondary text-white">
-						<li class="list-group-item bg-secondary text-white">Single Webpage</li>
-						<li class="list-group-item bg-secondary text-white">Unique Design Features</li>
-						<li class="list-group-item bg-secondary text-white">Responsive on Mobile and Desktop</li>
-					</ul>
+	<section>
+		<!--About me-->
+		<div class="container pb-4 pt-3 px-2 bg-dark text-white" id="aboutMe">
+			<div class="row px-2 pb-5 justify-content-between">
+				<div class="col-md-8">
+					<h2 class="fs-1 uppercutFont">About Saiyan Web Development</h2>
+					<p class="fs-4 custom-text-about-me">Welcome to the most <span
+							class="highlight-text-purple">affordable</span>
+						and <span class="highlight-text-purple">reliable</span> website development service! With my
+						service
+						you
+						will get
+						your own <span class="highlight-text-purple">website</span> built from the ground up. I <span
+								class="highlight-text-purple">guarantee</span> your new
+						website will look and work how you want. This is done by having virtual <span
+								class="highlight-text-purple">one-on-one</span>
+						meetings to ensure the
+						<span class="highlight-text-purple">design</span> and <span class="highlight-text-purple">functionality</span>
+						fits your needs and goals. You can <span class="highlight-text-purple">trust</span> that I can
+						make
+						your
+						new website a reality!
+					</p>
 				</div>
-				</a>
-			</div>
-			<div class="col-md-4 my-3">
-				<a href="#contactMe" style="text-decoration: none">
-				<div class="card border border-light border-3 bg-dark text-white" id="serviceTwo">
-					<div class="card-body backgroundSecondaryColor text-white">
-						<h5 class="card-title backgroundSecondaryColor text-white fs-3 text-uppercase">Creative Website</h5>
-						<p class="card-text backgroundSecondaryColor text-white">You will get a multi-page uniquely designed website.</p>
-					</div>
-					<ul class="list-group list-group-flush bg-secondary text-white">
-						<li class="list-group-item bg-secondary text-white">Multiple Webpages</li>
-						<li class="list-group-item bg-secondary text-white">Custom Design</li>
-						<li class="list-group-item bg-secondary text-white">Responsive on Mobile and Desktop</li>
-						<li class="list-group-item bg-secondary text-white">Cutting Edge</li>
-					</ul>
+				<div class="col-1 m-auto">
+					<a href="https://github.com/Brody-code-designer" title="GitHub" class="removeBlue">
+						<svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor"
+							 class="bi bi-github" viewBox="0 0 16 16">
+							<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+						</svg>
+					</a>
 				</div>
-				</a>
 			</div>
-			<div class="col-md-4 my-3">
-				<a href="#contactMe" style="text-decoration: none">
-				<div class="card border border-light border-3 bg-dark text-white" id="serviceThree">
-					<div class="card-body backgroundSecondaryColor text-white">
-						<h5 class="card-title backgroundSecondaryColor text-white fs-3 text-uppercase">E-Commerce Website</h5>
-						<p class="card-text backgroundSecondaryColor text-white">You will get a multi-page online shop. </p>
-					</div>
-					<ul class="list-group list-group-flush bg-secondary text-white">
-						<li class="list-group-item bg-secondary text-white">Multiple Webpages</li>
-						<li class="list-group-item bg-secondary text-white">Custom Design</li>
-						<li class="list-group-item bg-secondary text-white">Responsive on Mobile and Desktop</li>
-						<li class="list-group-item bg-secondary text-white">Online Shopping Experience</li>
-						<li class="list-group-item bg-secondary text-white">Secure Payment Checkout</li>
-					</ul>
+		</div>
+	</section>
+
+	<section>
+		<!--Services Available-->
+		<div class="container d-flex justify-content-center bg-dark text-white pb-2 px-2" id="services">
+			<div class="row">
+				<div class="col-md-4">
+					<h2 class="text-center fs-1 text-nowrap uppercutFont">Services</h2>
 				</div>
-				</a>
+			</div>
+		</div>
+		<div class="container bg-dark text-white fs-4 pb-5 px-2">
+			<div class="row px-2">
+				<div class="col-md-4 my-3">
+					<a href="#contactMe" style="text-decoration: none">
+						<div class="card border border-light border-3 bg-dark text-white" id="serviceOne">
+							<div class="card-body backgroundSecondaryColor text-white">
+								<h5 class="card-title backgroundSecondaryColor text-white fs-3 text-uppercase">Personal
+									Website</h5>
+								<p class="card-text backgroundSecondaryColor text-white">You will get a one-page
+									personally
+									designed website.</p>
+							</div>
+							<ul class="list-group list-group-flush bg-secondary text-white">
+								<li class="list-group-item bg-secondary text-white">Single Webpage</li>
+								<li class="list-group-item bg-secondary text-white">Unique Design Features</li>
+								<li class="list-group-item bg-secondary text-white">Responsive on Mobile and Desktop
+								</li>
+							</ul>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-4 my-3">
+					<a href="#contactMe" style="text-decoration: none">
+						<div class="card border border-light border-3 bg-dark text-white" id="serviceTwo">
+							<div class="card-body backgroundSecondaryColor text-white">
+								<h5 class="card-title backgroundSecondaryColor text-white fs-3 text-uppercase">Creative
+									Website</h5>
+								<p class="card-text backgroundSecondaryColor text-white">You will get a multi-page
+									uniquely
+									designed website.</p>
+							</div>
+							<ul class="list-group list-group-flush bg-secondary text-white">
+								<li class="list-group-item bg-secondary text-white">Multiple Webpages</li>
+								<li class="list-group-item bg-secondary text-white">Custom Design</li>
+								<li class="list-group-item bg-secondary text-white">Responsive on Mobile and Desktop
+								</li>
+								<li class="list-group-item bg-secondary text-white">Cutting Edge</li>
+							</ul>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-4 my-3">
+					<a href="#contactMe" style="text-decoration: none">
+						<div class="card border border-light border-3 bg-dark text-white" id="serviceThree">
+							<div class="card-body backgroundSecondaryColor text-white">
+								<h5 class="card-title backgroundSecondaryColor text-white fs-3 text-uppercase">
+									E-Commerce
+									Website</h5>
+								<p class="card-text backgroundSecondaryColor text-white">You will get a multi-page
+									online
+									shop. </p>
+							</div>
+							<ul class="list-group list-group-flush bg-secondary text-white">
+								<li class="list-group-item bg-secondary text-white">Multiple Webpages</li>
+								<li class="list-group-item bg-secondary text-white">Custom Design</li>
+								<li class="list-group-item bg-secondary text-white">Responsive on Mobile and Desktop
+								</li>
+								<li class="list-group-item bg-secondary text-white">Online Shopping Experience</li>
+								<li class="list-group-item bg-secondary text-white">Secure Payment Checkout</li>
+							</ul>
+						</div>
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
 
-	<!--Testimonials-->
-	<section class="container d-flex justify-content-center bg-dark text-white px-2 pb-2" id="reviews">
-		<div class="row">
-			<div class="col-md-3">
-				<h2 class="text-center fs-1 uppercutFont">Testimonials</h2>
+	<section>
+		<!--Testimonials-->
+		<div class="container d-flex justify-content-center bg-dark text-white px-2 pb-2" id="reviews">
+			<div class="row">
+				<div class="col-md-3">
+					<h2 class="text-center fs-1 uppercutFont">Testimonials</h2>
+				</div>
+			</div>
+		</div>
+		<!--	Alien testimonial-->
+		<div class="container">
+			<div class="row backgroundIMG px-2">
+				<img src="imgs/alien-bubble-text-2.png" alt="speech-bubble" class="alienBubble mx-auto">
 			</div>
 		</div>
 	</section>
-<!--	Alien testimonial-->
-	<section class="container">
-		<div class="row backgroundIMG px-2">
-	<img src="imgs/alien-bubble-text-2.png" alt="speech-bubble" class="alienBubble mx-auto">
-		</div>
-	</section>
 
-</main>
-
-<section class="container d-flex justify-content-center bg-dark text-white px-2 pb-2" id="contactMe">
-	<div class="row">
-		<div class="col-md-3 ">
-			<h2 class="text-center fs-1 fw-bold text-nowrap">Contact Form</h2>
-		</div>
-	</div>
-</section>
-
-<!--contact form-->
-<section class="container bg-dark text-white px-2">
-	<div class="row">
-		<div class="contact col">
-
-	<form action="./apis/" id="contact" method="post" novalidate>
-		<div class="form-group">
-			<label for="name">Name</label>
-			<div class="input-group">
-				<input class="form-control" id="name" name="name" placeholder="Your Name" type="text">
+	<section>
+		<!--contact form-->
+		<div class="container d-flex justify-content-center bg-dark text-white px-2 pb-2" id="contactMe">
+			<div class="row">
+				<div class="col-md-3 ">
+					<h2 class="text-center fs-1 fw-bold text-nowrap">Contact Form</h2>
+				</div>
 			</div>
 		</div>
-		<div class="form-group">
-			<label for="email">Email</label>
-			<div class="input-group">
-				<input class="form-control" id="email" name="email" placeholder="Your Email" type="email">
-			</div>
-		</div>
-		<div class="form-group">
-			<label for="subject">Subject</label>
-			<div class="input-group">
-				<input class="form-control" id="subject" name="subject" placeholder="Subject" type="text">
-				<div id="insertServiceOne"></div>
-			</div>
-		</div>
-		<div class="form-group">
-			<label for="message">Message</label>
-			<div class="input-group">
+
+		<div class="container bg-dark text-white px-2">
+			<div class="row">
+				<div class="contact col">
+
+					<form action="./apis/" id="contact" method="post" novalidate>
+						<div class="form-group">
+							<label for="name">Name</label>
+							<div class="input-group">
+								<input class="form-control" id="name" name="name" placeholder="Your Name" type="text">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="email">Email</label>
+							<div class="input-group">
+								<input class="form-control" id="email" name="email" placeholder="Your Email"
+									   type="email">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="subject">Subject</label>
+							<div class="input-group">
+								<input class="form-control" id="subject" name="subject" placeholder="Subject"
+									   type="text">
+								<div id="insertServiceOne"></div>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="message">Message</label>
+							<div class="input-group">
 				<textarea class="form-control" id="message" maxlength="2000" name="message"
 						  placeholder="Your Message (2000 characters max)" required
 						  rows="5"></textarea>
+							</div>
+						</div>
+						<div class="g-recaptcha" data-sitekey="6LeZqtgaAAAAAONroZKRa6n8DIa4QbLVM-sW6XZ4"></div>
+						<button class="btn backgroundSecondaryColor" type="submit">Submit</button>
+						<button class="btn backgroundSecondaryColor" type="reset">Reset</button>
+					</form>
+
+					<div id="output-area"></div>
+
+				</div>
 			</div>
 		</div>
-		<div class="g-recaptcha" data-sitekey="6LeZqtgaAAAAAONroZKRa6n8DIa4QbLVM-sW6XZ4"></div>
-		<button class="btn backgroundSecondaryColor" type="submit">Submit</button>
-		<button class="btn backgroundSecondaryColor" type="reset">Reset</button>
-	</form>
+	</section>
+</main>
 
-	<div id="output-area"></div>
-
+<footer>
+	<div class="container-flow">
+		<div class="row footer mt-3">
 		</div>
 	</div>
-</section>
-
+</footer>
 
 <script
 		src="https://code.jquery.com/jquery-3.5.1.min.js"
